# multi-party-ecdsa

./: Cargo.toml  new-secretkey.sh
src/protocols/multi_party_ecdsa/gg_2018/: party_i.rs
src/protocols/two_party_ecdsa/lindell_2017/: party_one.rs
