[package]
name = "multi-party-ecdsa"
version = "0.1.0"
authors = [
    "Gary <gary@kzencorp.com>",
    "Omer <omer.shlomovits@gmail.com>"
]
keywords = [
    "ecdsa",
    "multi-party-ecdsa",
    "signature",
    "rust",
    "secret-shares",
    "blockchain",
    "cryptography",
    "cryptocurrency"]

homepage = "https://github.com/jasonh-ca/multi-party-ecdsa"
repository = "https://github.com/jasonh-ca/multi-party-ecdsa"
license = "GPL-3.0-or-later"
categories = ["cryptography"]

[lib]
crate-type = ["lib"]

[dependencies]
paillier = { git = "https://github.com/jasonh-ca/rust-paillier"}
zk-paillier = { git = "https://github.com/jasonh-ca/zk-paillier"}


hex = "0.3.2"
subtle = {version = "2", features = ["nightly"]}
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
reqwest = "0.9.5"
rocket = "0.4.0"
rocket_contrib = "0.4.0"
uuid = { version = "0.7", features = ["v4"] }
rust-crypto = "^0.2"

[dependencies.curv]
git = "https://github.com/jasonh-ca/curv"
features =  ["ec_secp256k1"]

[dependencies.centipede]
git = "https://github.com/jasonh-ca/centipede"

[patch.crates-io]
rust-gmp = { version = "0.5.0", features = ["serde_support"], git = "https://github.com/KZen-networks/rust-gmp", rev = "bc72b09"}

[dev-dependencies]
criterion = "0.2"

[[bench]]
name = "keygen"
path = "benches/multi_party_ecdsa/gg18/keygen.rs"
harness = false
